--- a/src/common/test-report.css
+++ b/src/common/test-report.css
@@ -212,11 +212,12 @@ header {
 
 .suite-container .suite-tests {
   overflow-y: hidden;
-  height: 0;
+  max-height: 0px;
+  transition: all 300ms ease-in-out 0ms;
 }
 
 .suite-container > input[type='checkbox']:checked ~ .suite-tests {
-  height: auto;
+  max-height: 1000px;
   overflow: visible;
 }
 
@@ -227,6 +228,7 @@ header {
   display: flex;
   align-items: center;
   margin-bottom: 0.25rem;
+  transition: all 300ms ease-in-out 0ms;
 }
 
 .suite-info:hover {
